tests/baselines/reference/ES5SymbolProperty4.errors.txt
tests/cases/conformance/Symbols/ES5SymbolProperty4.ts(4,6): error TS2471: A computed property name of the form 'Symbol.iterator' must be of type 'symbol'.
tests/cases/conformance/Symbols/ES5SymbolProperty4.ts(7,9): error TS2537: Type 'C' has no matching index signature for type 'string'.


==== tests/cases/conformance/Symbols/ES5SymbolProperty4.ts (2 errors) ====
    var Symbol: { iterator: string };
    
    class C {
        [Symbol.iterator]() { }
         ~~~~~~~~~~~~~~~
!!! error TS2471: A computed property name of the form 'Symbol.iterator' must be of type 'symbol'.
    }
    
    (new C)[Symbol.iterator]
            ~~~~~~~~~~~~~~~
!!! error TS2537: Type 'C' has no matching index signature for type 'string'.